--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="cards$ | async as cards">
-  {{cards | json}}
+
+<div class="container" *ngIf="cards$ | async as cards">
+  <app-card *ngFor="let card of cards" [card]="card"></app-card>
 </div>
