--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
+@import 'assets/sass/variables.scss';
+@import '~bootstrap/scss/bootstrap';
 @import 'assets/sass/font-face.scss';
-@import 'assets/sass/bootstrap-helpers.scss';
+// @import 'assets/sass/bootstrap-helpers.scss';
 
 * {
   font-family: "effra", sans-serif;
