search and validations

--- a/src/app/core/layout/footer.component.html
+++ b/src/app/core/layout/footer.component.html
@@ -1,10 +1,9 @@
 <footer>
   <div class="container">
-    <a class="logo-font" routerLink="/">Appmon</a>
-    <span class="attribution">
-      &copy; {{ today | date: 'yyyy' }}.
-      An interactive learning project from <a href="https://thinkster.io">Thinkster</a>.
-      Code licensed under MIT.
-    </span>
+    <div class="row m-0">
+      <div class="col-12 text-center p-0">
+        <div class="m-2"><a href="https://www.linkedin.com/in/enzo-glauber" class="text-muted m-1" target="_blank" data-unsp-sanitized="clean">Made with <span class=" text-danger">love</span> by Enzo</a></div>
+      </div>
+    </div>
   </div>
 </footer>
