--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -1,5 +1,16 @@
-<div class="container pokemons">
+<div class="container-fluid bg-light">
+  <div class="row">
+    <div class="col justify-content-center">
+      <app-search></app-search>
+    </div>
+  </div>
+</div>
+
+<div class="container pokemons" *ngIf="cards$ | async as cards">
   <div class="row justify-content-between">
     <app-card *ngFor="let card of cards" [card]="card"></app-card>
+  </div>
+  <div class="d-flex justify-content-center" *ngIf="!cards?.length">
+    Deception failed! (Falha no engano!)
   </div>
 </div>
